fixes overflow on vertical tabs

--- a/app/assets/stylesheets/physicians.css.scss
+++ b/app/assets/stylesheets/physicians.css.scss
@@ -3,6 +3,5 @@
   @include shift(1);
   background-color: #F8F8F8 ;
   height: em(450);
-  overflow: auto;
-  padding: 50px;
+  padding: 20px;
 }
