--- a/app/assets/stylesheets/refills/_vertical-tabs.scss
+++ b/app/assets/stylesheets/refills/_vertical-tabs.scss
@@ -5,7 +5,7 @@
   $tab-content-background: lighten($tab-border-color, 10);
   $tab-active-color: $tab-content-background;
   $tab-inactive-color: $base-body-color;
-  $vertical-tabs-height: em(450);
+  $vertical-tabs-height: em(350);
   $vertical-tab-mode: $medium-screen;
 
   @include clearfix;
@@ -48,6 +48,7 @@
   .vertical-tab-content-container {
     display: block;
     margin: 0 auto;
+    overflow: auto;
 
     & a:focus { 
       outline: none; 
